Correccion crear cuenta

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,47 @@
 <resources>
-    <string name="app_name">MyFamilySpace</string>
+    <string name="app_name">Wi</string>
+    <string name="gran_turismo">Gran Turismo</string>
+    <string name="recuerda">Recuerda:</string>
+    <string name="uno">Uno</string>
+    <string name="lo_mas_reciente">Lo más reciente:</string>
+    <string name="my_family_space">My Family Space</string>
+    <string name="actividades">Actividades</string>
+    <string name="boton_para_ir_a_la_pantalla_principal">Boton para ir a la pantalla principal</string>
+    <string name="boton_para_agregar_una_actividad">Boton para agregar una actividad</string>
+    <string name="titulo">Titulo</string>
+    <string name="fecha">01/11/2023</string>
+    <string name="hora_inicial">08:00</string>
+    <string name="hora_final">12:00</string>
+    <string name="boton_para_volver_atras">Boton para volver atras</string>
+    <string name="iniciar_sesion">Iniciar Sesión</string>
+    <string name="nombre_o_usuario">Nombre o usuario</string>
+    <string name="edit_text_nombre_o_usuario">Nombre o usuario</string>
+    <string name="edit_text_contrasena_iniciar_sesion">Contraseña</string>
+    <string name="contrasena_iniciar_sesion">Contraseña</string>
+    <string name="edit_text_correo_electronico_iniciar_sesion">Correo electrónico</string>
+    <string name="correo_electronico_iniciar_sesion">Correo electrónico</string>
+    <string name="boton_iniciar_sesion">Ingresar</string>
+    <string name="crear_cuenta">CREAR CUENTA</string>
+    <string name="nombre_completo">Nombre completo</string>
+    <string name="edit_text_nombre_completo">Nombre completo</string>
+    <string name="nombre_de_usuario">Nombre de usuario</string>
+    <string name="edit_text_nombre_de_usuario">Nombre de usuario</string>
+    <string name="correo_electronico_crear_cuenta">Correo electrónico</string>
+    <string name="edit_text_correo_electronico">Correo electrónico</string>
+    <string name="contrasena_crear_cuenta">Contraseña</string>
+    <string name="edit_text_constrasena_crear_cuenta">Contraseña</string>
+    <string name="confirmar_contrasena_crear_cuenta">Confirmar contraseña</string>
+    <string name="edit_text_confirmar_contrasena_crear_cuenta">Escriba nuevamente su contraseña</string>
+    <string name="boton_crear_cuenta_registrarse">Registrarse</string>
+    <string name="crear_actividad">Crear actividad</string>
+    <string name="selecciona_el_dia">Selecciona la fecha</string>
+    <string name="titulo_de_la_actividad">Titulo de la actividad</string>
+    <string name="edit_text_titulo_actividad">Almuerzo familiar, pasear, viajar, etc.</string>
+    <string name="detalles_actividad">Detalles</string>
+    <string name="edit_text_detalles_actividad">Da detalles sobre la actividad</string>
+    <string name="fecha_actividad">Fecha</string>
+    <string name="hora_inicial_crear_actividad">Hora inicial</string>
+    <string name="edit_text_hora_inicial_crear_actividad">Selecciona la hora</string>
+    <string name="hora_final_crear_actividad">Hora final</string>
+    <string name="edit_text_hora_final_crear_actividad">Selecciona la hora</string>
 </resources>
