--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -56,4 +56,8 @@
     <string name="blue_beetle">Blue Beetle</string>
     <string name="sinopsis">Sinopsis</string>
     <string name="accion">Accion</string>
+    <string name="comedia">Comedia</string>
+    <string name="romance">Romance</string>
+    <string name="ficcion">Ficcion</string>
+    <string name="Terror">Terror</string>
 </resources>
